* TransFirst Transaction Express: Update xml prefixing to be compatible with Nokogiri 1.13.4 [dsmcclain] #4582
* Iveri: Adding support for external MPI 3DS2 [heavyblade] #4598
* Credorax: Pass Network Transaction ID on MIT [jherreraa] #4600
* iVeri: Remove schema validation on Live requests [curiousepic] #4606
* Beanstream: Adding Third Party 3DS fields [heavyblade] #4602

== Version 1.127.0 (September 20th, 2022)
* BraintreeBlue: Add venmo profile_id [molbrown] #4512
* Maestro: Adding missing BIN ranges [bradbroge] #4423
* Simetrik: Fix integer and float types, update scrub method [rachelkirk] #4405
* Credorax: Convert country codes for  `recipient_country_code` field [ajawadmirza] #4408
* BlueSnap: Correctly parse `refund-transaction-id` [dsmcclain] #4411
* Worldpay: Add level II and level III data [javierpedrozaing] #4393
* Worldpay: extract `issuer_response_code` and `issuer_response_description` from gateway response [dsmcclain] #4412
* Vantiv: Support `duplicate` field read from saleResponse.duplicate attr [mashton] #4413
* Ogone: Add support for 3dsv2 [gasb150] #4410
* BlueSnap: Add support for stored credentials [ajawadmirza] #4414
* Monei: Add support for `lang` field [drkjc] #4421
* Wompi: Redirect `refund` to `void` [drkjc] #4424
* Rapyd: 3DS Support [naashton] #4422
* Adyen: Update API version [jherreraa] #4418
* Ogone: Updated home gateway URL [gasb150] #4419
* Credorax: Update url gateway and credit cards [javierpedrozaing] #4417
* Kushki: Pass extra_taxes with USD [therufs] #4426
* DLocal: fix bug with `X-Idempotency-Key` header [dsmcclain] #4431
* DLocal: Mark support for additional countries [gasb150] #4427
* Rapyd: Additional Fields [naashton] #4434
* Braintree: Return generated client token [BritneyS] #4416
* Simetrik: Update `audience` field [simetrik-frank] #4433
* CyberSource: Add bank account payment method support [heavyblade] #4428
* Rapyd: Zero Dollar Auth [naashton] #4435
* Rapyd: Scrub ACH [naashton] #4436