@@ -15,6 +15,7 @@
 * Credorax: Pass Network Transaction ID on MIT [jherreraa] #4600
 * iVeri: Remove schema validation on Live requests [curiousepic] #4606
 * Beanstream: Adding Third Party 3DS fields [heavyblade] #4602
+* Borgun: Add support for 3DS preauth [ajawadmirza] #4603
 
 == Version 1.127.0 (September 20th, 2022)
 * BraintreeBlue: Add venmo profile_id [molbrown] #4512
